--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -8,10 +8,9 @@
 
 <ion-content [fullscreen]="true">
 
-  <ion-list>
-  <ion-item *ngFor="let contato of this.listaDeContatos">
+  <ion-list *ngFor="let contato of this.listaDeContatos; let i = index">
+  <ion-item (click)="editar(i)">
      <ion-label>{{contato.nome}}</ion-label>
-     <ion-label>{{contato.telefone}}</ion-label>
   </ion-item>
   </ion-list>
 
