--- a/src/app/view/detalhar/detalhar.page.html
+++ b/src/app/view/detalhar/detalhar.page.html
@@ -5,27 +5,32 @@
 </ion-header>
 
 <ion-content >
+ <ion-item>
+  <ion-toggle (ionChange)="habilitar()">Habilitar Edição</ion-toggle>
+ </ion-item>
+
   <ion-list>
     <ion-item>
-      <ion-input label="Nome" placeholder="Insira o nome" [(ngModel)]="nome"></ion-input>
+      <ion-input label="Nome" placeholder="Insira o nome" [(ngModel)]="nome" disabled="{{edicao}}"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input label="Telefone" type="number" placeholder="Insira o telefone" [(ngModel)]="telefone"></ion-input>
+      <ion-input label="Telefone" type="number" placeholder="Insira o telefone" [(ngModel)]="telefone" disabled="{{edicao}}"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input label="Email" placeholder="Insira o email" [(ngModel)]="email"></ion-input>
+      <ion-input label="Email" placeholder="Insira o email" [(ngModel)]="email" disabled="{{edicao}}"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-select label="Gênero" placeholder="Selecione" [(ngModel)]="genero">
+      <ion-select label="Gênero" placeholder="Selecione" [(ngModel)]="genero" disabled="{{edicao}}">
         <ion-select-option value="0">Masculino</ion-select-option>
         <ion-select-option value="1">Feminino</ion-select-option>
         <ion-select-option value="2">Não Declarado</ion-select-option>
       </ion-select>
     </ion-item>
 
-  <!--   <ion-button expand="full" (click)="cadastrar()">Cadastrar</ion-button> -->
+     <ion-button expand="full" (click)="editar()" disabled="{{edicao}}">Salvar</ion-button>
+     <ion-button expand="full" (click)="excluir()" color="danger" disabled="{{edicao}}">Excluir</ion-button>
   </ion-list>
 </ion-content>
