--- a/src/app/view/detalhar/detalhar.page.html
+++ b/src/app/view/detalhar/detalhar.page.html
@@ -29,7 +29,12 @@
         <ion-select-option value="2">Não Declarado</ion-select-option>
       </ion-select>
     </ion-item>
-
+    <img src="{{this.contato.downloadURL}}" />
+    <ion-item>
+      <ion-button size="default" color="success" shape="round" disabled="{{edicao}}">
+        <input type="file" (change)="uploadFile($event.target)" />
+      </ion-button>
+    </ion-item>
      <ion-button expand="full" (click)="editar()" disabled="{{edicao}}">Salvar</ion-button>
      <ion-button expand="full" (click)="excluir()" color="danger" disabled="{{edicao}}">Excluir</ion-button>
   </ion-list>
