--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -10,6 +10,7 @@
 
   <ion-list *ngFor="let contato of this.listaDeContatos">
   <ion-item (click)="editar(contato)">
+    <ion-avatar><img src="{{contato.downloadURL}}" /></ion-avatar>
      <ion-label>{{contato.nome}}</ion-label>
   </ion-item>
   </ion-list>
